--- a/create_survey.ipynb
+++ b/create_survey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "401f165c-5fc1-431c-8be5-11344b4a98ab",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "ad8e4b31-06da-4651-b7d2-614157d4d236",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "eeea35c1-9013-412a-8594-a8ab933c4a79",
    "metadata": {},
    "outputs": [],
@@ -43,29 +43,29 @@
     "                    haberturk.sample(50, ignore_index=True),\n",
     "                    hurriyet.sample(50, ignore_index=True),\n",
     "                    milliyet.sample(50, ignore_index=True),\n",
-    "                    ntv.sample(50, ignore_index=True),\n",
+    "                    ntv[[\"title\", \"img_url\", \"publishing_date\"]].sample(50, ignore_index=True),\n",
     "                    sozcu.sample(50, ignore_index=True),\n",
     "                    yenicag.sample(50, ignore_index=True)],\n",
-    "                   keys=[\"cumhuriyet\", \"ensonhaber\", \"haber7\", \"haberler_com\", \"haberturk\",\n",
-    "                         \"hurriyet\", \"milliyet\", \"ntv\", \"sozcu\", \"yenicag\"],\n",
-    "                   axis=1,\n",
+    "                   # keys=[\"cumhuriyet\", \"ensonhaber\", \"haber7\", \"haberler_com\", \"haberturk\",\n",
+    "                   #       \"hurriyet\", \"milliyet\", \"ntv\", \"sozcu\", \"yenicag\"],\n",
+    "                   axis=0,\n",
     "                   ignore_index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "8fb97170-9ba3-4db2-a0f3-8b60a245c86e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "survey.to_csv('survey.csv', index=False)"
+    "survey.to_csv('survey.csv', index_label='id')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a4c8f4a-bb93-42ce-9d5d-d2c4c24ce6aa",
+   "id": "93078acb-e7dd-48f7-9ded-dcc55bbead52",
    "metadata": {},
    "outputs": [],
    "source": []
