--- a/create_survey.ipynb
+++ b/create_survey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "401f165c-5fc1-431c-8be5-11344b4a98ab",
    "metadata": {},
    "outputs": [],
@@ -12,40 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "ad8e4b31-06da-4651-b7d2-614157d4d236",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cumhuriyet = pd.read_csv('data/cumhuriyet-data.csv')\n",
-    "ensonhaber = pd.read_csv('data/ensonhaber-data.csv')\n",
-    "haber7 = pd.read_csv('data/haber7-data.csv')\n",
-    "haberler_com = pd.read_csv('data/haberler_com-data.csv')\n",
-    "haberturk = pd.read_csv('data/haberturk-data.csv')\n",
-    "hurriyet = pd.read_csv('data/hurriyet-data.csv')\n",
-    "milliyet = pd.read_csv('data/milliyet-data.csv')\n",
-    "ntv = pd.read_csv('data/ntv-data.csv')\n",
-    "sozcu = pd.read_csv('data/sozcu-data.csv')\n",
-    "yenicag = pd.read_csv('data/yenicag-data.csv')"
+    "cumhuriyet = pd.read_csv('data/cumhuriyet-data.csv', parse_dates=['publishing_date'])\n",
+    "ensonhaber = pd.read_csv('data/ensonhaber-data.csv', parse_dates=['publishing_date'])\n",
+    "haber7 = pd.read_csv('data/haber7-data.csv', parse_dates=['publishing_date'])\n",
+    "haberler_com = pd.read_csv('data/haberler_com-data.csv', parse_dates=['publishing_date'])\n",
+    "haberturk = pd.read_csv('data/haberturk-data.csv', parse_dates=['publishing_date'])\n",
+    "hurriyet = pd.read_csv('data/hurriyet-data.csv', parse_dates=['publishing_date'])\n",
+    "milliyet = pd.read_csv('data/milliyet-data.csv', parse_dates=['publishing_date'])\n",
+    "ntv = pd.read_csv('data/ntv-data.csv', parse_dates=['publishing_date'])\n",
+    "sozcu = pd.read_csv('data/sozcu-data.csv', parse_dates=['publishing_date'])\n",
+    "yenicag = pd.read_csv('data/yenicag-data.csv', parse_dates=['publishing_date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "eeea35c1-9013-412a-8594-a8ab933c4a79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "survey = pd.concat([cumhuriyet.sample(50, ignore_index=True),\n",
-    "                    ensonhaber.sample(50, ignore_index=True),\n",
-    "                    haber7.sample(50, ignore_index=True),\n",
-    "                    haberler_com.sample(50, ignore_index=True),\n",
-    "                    haberturk.sample(50, ignore_index=True),\n",
-    "                    hurriyet.sample(50, ignore_index=True),\n",
-    "                    milliyet.sample(50, ignore_index=True),\n",
-    "                    ntv[[\"title\", \"img_url\", \"publishing_date\"]].sample(50, ignore_index=True),\n",
-    "                    sozcu.sample(50, ignore_index=True),\n",
-    "                    yenicag.sample(50, ignore_index=True)],\n",
+    "survey = pd.concat([cumhuriyet.head(50),\n",
+    "                    ensonhaber.head(50),\n",
+    "                    haber7.head(50),\n",
+    "                    haberler_com.head(50),\n",
+    "                    haberturk.head(50),\n",
+    "                    hurriyet.head(50),\n",
+    "                    milliyet.head(50),\n",
+    "                    ntv.head(50),\n",
+    "                    sozcu.head(50),\n",
+    "                    yenicag.head(50)],\n",
     "                   # keys=[\"cumhuriyet\", \"ensonhaber\", \"haber7\", \"haberler_com\", \"haberturk\",\n",
     "                   #       \"hurriyet\", \"milliyet\", \"ntv\", \"sozcu\", \"yenicag\"],\n",
     "                   axis=0,\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "8fb97170-9ba3-4db2-a0f3-8b60a245c86e",
    "metadata": {},
    "outputs": [],
