Removed haberler.com articles with invalid image. Collected random articles instead of the most recent 50.

--- a/create_survey.ipynb
+++ b/create_survey.ipynb
@@ -36,16 +36,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survey = pd.concat([cumhuriyet.head(50),\n",
-    "                    ensonhaber.head(50),\n",
-    "                    haber7.head(50),\n",
-    "                    haberler_com.head(50),\n",
-    "                    haberturk.head(50),\n",
-    "                    hurriyet.head(50),\n",
-    "                    milliyet.head(50),\n",
-    "                    ntv.head(50),\n",
-    "                    sozcu.head(50),\n",
-    "                    yenicag.head(50)],\n",
+    "survey = pd.concat([cumhuriyet.sample(50, ignore_index=True),\n",
+    "                    ensonhaber.sample(50, ignore_index=True),\n",
+    "                    haber7.sample(50, ignore_index=True),\n",
+    "                    haberler_com.sample(50, ignore_index=True),\n",
+    "                    haberturk.sample(50, ignore_index=True),\n",
+    "                    hurriyet.sample(50, ignore_index=True),\n",
+    "                    milliyet.sample(50, ignore_index=True),\n",
+    "                    ntv.sample(50, ignore_index=True),\n",
+    "                    sozcu.sample(50, ignore_index=True),\n",
+    "                    yenicag.sample(50, ignore_index=True)],\n",
     "                   # keys=[\"cumhuriyet\", \"ensonhaber\", \"haber7\", \"haberler_com\", \"haberturk\",\n",
     "                   #       \"hurriyet\", \"milliyet\", \"ntv\", \"sozcu\", \"yenicag\"],\n",
     "                   axis=0,\n",
@@ -87,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
