--- a/create_survey.ipynb
+++ b/create_survey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "401f165c-5fc1-431c-8be5-11344b4a98ab",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ad8e4b31-06da-4651-b7d2-614157d4d236",
    "metadata": {},
    "outputs": [],
@@ -31,21 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "eeea35c1-9013-412a-8594-a8ab933c4a79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "survey = pd.concat([cumhuriyet.sample(50, ignore_index=True),\n",
-    "                    ensonhaber.sample(50, ignore_index=True),\n",
-    "                    haber7.sample(50, ignore_index=True),\n",
-    "                    haberler_com.sample(50, ignore_index=True),\n",
-    "                    haberturk.sample(50, ignore_index=True),\n",
-    "                    hurriyet.sample(50, ignore_index=True),\n",
-    "                    milliyet.sample(50, ignore_index=True),\n",
-    "                    ntv.sample(50, ignore_index=True),\n",
-    "                    sozcu.sample(50, ignore_index=True),\n",
-    "                    yenicag.sample(50, ignore_index=True)],\n",
+    "survey = pd.concat([cumhuriyet.head(50),\n",
+    "                    ensonhaber.head(50),\n",
+    "                    haber7.head(50),\n",
+    "                    haberler_com.head(50),\n",
+    "                    haberturk.head(50),\n",
+    "                    hurriyet.head(50),\n",
+    "                    milliyet.head(50),\n",
+    "                    ntv.head(50),\n",
+    "                    sozcu.head(50),\n",
+    "                    yenicag.head(50)],\n",
     "                   # keys=[\"cumhuriyet\", \"ensonhaber\", \"haber7\", \"haberler_com\", \"haberturk\",\n",
     "                   #       \"hurriyet\", \"milliyet\", \"ntv\", \"sozcu\", \"yenicag\"],\n",
     "                   axis=0,\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8fb97170-9ba3-4db2-a0f3-8b60a245c86e",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
