fixed something embarrassing

--- a/create_survey.ipynb
+++ b/create_survey.ipynb
@@ -17,16 +17,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cumhuriyet = pd.read_csv('data/cumhuriyet-data.csv', parse_dates=['publishing_date'])\n",
-    "ensonhaber = pd.read_csv('data/ensonhaber-data.csv', parse_dates=['publishing_date'])\n",
-    "haber7 = pd.read_csv('data/haber7-data.csv', parse_dates=['publishing_date'])\n",
-    "haberler_com = pd.read_csv('data/haberler_com-data.csv', parse_dates=['publishing_date'])\n",
-    "haberturk = pd.read_csv('data/haberturk-data.csv', parse_dates=['publishing_date'])\n",
-    "hurriyet = pd.read_csv('data/hurriyet-data.csv', parse_dates=['publishing_date'])\n",
-    "milliyet = pd.read_csv('data/milliyet-data.csv', parse_dates=['publishing_date'])\n",
-    "ntv = pd.read_csv('data/ntv-data.csv', parse_dates=['publishing_date'])\n",
-    "sozcu = pd.read_csv('data/sozcu-data.csv', parse_dates=['publishing_date'])\n",
-    "yenicag = pd.read_csv('data/yenicag-data.csv', parse_dates=['publishing_date'])"
+    "cumhuriyet = pd.read_csv('data/cumhuriyet-data.csv', parse_dates=['publication_date'])\n",
+    "ensonhaber = pd.read_csv('data/ensonhaber-data.csv', parse_dates=['publication_date'])\n",
+    "haber7 = pd.read_csv('data/haber7-data.csv', parse_dates=['publication_date'])\n",
+    "haberler_com = pd.read_csv('data/haberler_com-data.csv', parse_dates=['publication_date'])\n",
+    "haberturk = pd.read_csv('data/haberturk-data.csv', parse_dates=['publication_date'])\n",
+    "hurriyet = pd.read_csv('data/hurriyet-data.csv', parse_dates=['publication_date'])\n",
+    "milliyet = pd.read_csv('data/milliyet-data.csv', parse_dates=['publication_date'])\n",
+    "ntv = pd.read_csv('data/ntv-data.csv', parse_dates=['publication_date'])\n",
+    "sozcu = pd.read_csv('data/sozcu-data.csv', parse_dates=['publication_date'])\n",
+    "yenicag = pd.read_csv('data/yenicag-data.csv', parse_dates=['publication_date'])"
    ]
   },
   {
