--- a/plot.ipynb
+++ b/plot.ipynb
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.publishing_date = df.publishing_date.str[:10]\n",
-    "date = df.publishing_date.value_counts()"
+    "df.publication_date = df.publication_date.str[:10]\n",
+    "date = df.publication_date.value_counts()"
    ]
   },
   {
