--- a/create_survey.ipynb
+++ b/create_survey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "401f165c-5fc1-431c-8be5-11344b4a98ab",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ad8e4b31-06da-4651-b7d2-614157d4d236",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "                   # keys=[\"cumhuriyet\", \"ensonhaber\", \"haber7\", \"haberler_com\", \"haberturk\",\n",
     "                   #       \"hurriyet\", \"milliyet\", \"ntv\", \"sozcu\", \"yenicag\"],\n",
     "                   axis=0,\n",
-    "                   ignore_index=False)"
+    "                   ignore_index=True)"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survey.to_csv('survey.csv', index_label='id')"
+    "survey.to_csv('survey.csv', index_label='title')"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
