--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "707fa862-2128-454b-9207-d6767d54ee26",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import statsmodels as sm\n",
-    "import scipy as sp"
+    "import scipy as sp\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "6bcf5e0b-bee7-416e-a19c-3b240a8d2c65",
    "metadata": {},
    "outputs": [],
@@ -26,549 +27,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "69130f8b-3522-48cf-8b39-58f97203951f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'statsmodels.api' has no attribute 'inter_rater'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Fleiss' kappa\u001b[39;00m\n\u001b[1;32m      2\u001b[0m responses_np \u001b[38;5;241m=\u001b[39m responses\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[0;32m----> 3\u001b[0m array, categories \u001b[38;5;241m=\u001b[39m \u001b[43msm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minter_rater\u001b[49m\u001b[38;5;241m.\u001b[39maggregate_raters(responses_np)\n\u001b[1;32m      4\u001b[0m kappa \u001b[38;5;241m=\u001b[39m sm\u001b[38;5;241m.\u001b[39minter_rater\u001b[38;5;241m.\u001b[39mfleiss_kappa(array)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(kappa)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'statsmodels.api' has no attribute 'inter_rater'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2129125817634864\n"
      ]
     }
    ],
    "source": [
     "# Fleiss' kappa\n",
     "responses_np = responses.to_numpy()\n",
-    "array, categories = sm.inter_rater.aggregate_raters(responses_np)\n",
-    "kappa = sm.inter_rater.fleiss_kappa(array)\n",
+    "array, categories = statsmodels.stats.inter_rater.aggregate_raters(responses_np)\n",
+    "kappa = sm.stats.fleiss_kappa(array)\n",
     "print(kappa)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1c5ba088-9f7e-4b52-a252-c7d7a467feb8",
+   "execution_count": 4,
+   "id": "835b9709-2d11-42bc-ae4b-314381f306e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode = np.apply_along_axis(sp.stats.mode, arr=responses_np, axis=1)"
+    "publishers_df = pd.read_csv('./publishers_clickbait.csv', index_col='publisher')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "834e09bf-ce4b-43a0-b4b9-dae8c61fbe7c",
+   "id": "fb1a5d5b-a095-46cc-b55d-e817c9849f02",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2],\n",
-       "       [2, 3],\n",
-       "       [5, 3],\n",
-       "       [4, 3],\n",
-       "       [1, 2],\n",
-       "       [1, 3],\n",
-       "       [1, 4],\n",
-       "       [3, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 3],\n",
-       "       [1, 3],\n",
-       "       [1, 2],\n",
-       "       [5, 2],\n",
-       "       [2, 2],\n",
-       "       [4, 2],\n",
-       "       [1, 2],\n",
-       "       [3, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 3],\n",
-       "       [2, 3],\n",
-       "       [3, 2],\n",
-       "       [1, 1],\n",
-       "       [4, 3],\n",
-       "       [3, 2],\n",
-       "       [2, 3],\n",
-       "       [5, 3],\n",
-       "       [2, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 4],\n",
-       "       [1, 1],\n",
-       "       [5, 4],\n",
-       "       [2, 1],\n",
-       "       [1, 3],\n",
-       "       [3, 3],\n",
-       "       [4, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 3],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [4, 2],\n",
-       "       [1, 1],\n",
-       "       [3, 3],\n",
-       "       [1, 2],\n",
-       "       [2, 1],\n",
-       "       [2, 2],\n",
-       "       [2, 3],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [3, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 1],\n",
-       "       [3, 2],\n",
-       "       [5, 3],\n",
-       "       [5, 2],\n",
-       "       [1, 2],\n",
-       "       [5, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 4],\n",
-       "       [1, 3],\n",
-       "       [1, 2],\n",
-       "       [3, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 3],\n",
-       "       [1, 2],\n",
-       "       [3, 2],\n",
-       "       [2, 2],\n",
-       "       [2, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 3],\n",
-       "       [1, 3],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 1],\n",
-       "       [1, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 1],\n",
-       "       [2, 2],\n",
-       "       [4, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [4, 3],\n",
-       "       [4, 3],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [4, 3],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [3, 2],\n",
-       "       [3, 2],\n",
-       "       [1, 3],\n",
-       "       [5, 4],\n",
-       "       [1, 3],\n",
-       "       [4, 2],\n",
-       "       [5, 2],\n",
-       "       [4, 2],\n",
-       "       [1, 1],\n",
-       "       [2, 2],\n",
-       "       [5, 4],\n",
-       "       [2, 2],\n",
-       "       [3, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [5, 2],\n",
-       "       [4, 2],\n",
-       "       [1, 3],\n",
-       "       [1, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 4],\n",
-       "       [2, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [5, 4],\n",
-       "       [3, 2],\n",
-       "       [4, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 1],\n",
-       "       [5, 3],\n",
-       "       [5, 4],\n",
-       "       [4, 2],\n",
-       "       [4, 2],\n",
-       "       [1, 3],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 3],\n",
-       "       [5, 4],\n",
-       "       [4, 3],\n",
-       "       [1, 2],\n",
-       "       [1, 3],\n",
-       "       [2, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 1],\n",
-       "       [5, 4],\n",
-       "       [2, 2],\n",
-       "       [4, 3],\n",
-       "       [2, 3],\n",
-       "       [2, 2],\n",
-       "       [3, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 1],\n",
-       "       [4, 3],\n",
-       "       [5, 3],\n",
-       "       [2, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [4, 2],\n",
-       "       [2, 3],\n",
-       "       [4, 4],\n",
-       "       [5, 4],\n",
-       "       [2, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 4],\n",
-       "       [2, 2],\n",
-       "       [2, 3],\n",
-       "       [4, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [2, 3],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [5, 4],\n",
-       "       [2, 2],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 3],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [3, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 3],\n",
-       "       [1, 2],\n",
-       "       [5, 3],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [4, 3],\n",
-       "       [3, 2],\n",
-       "       [4, 2],\n",
-       "       [3, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [4, 2],\n",
-       "       [2, 3],\n",
-       "       [4, 3],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 3],\n",
-       "       [5, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [4, 3],\n",
-       "       [1, 3],\n",
-       "       [1, 2],\n",
-       "       [2, 3],\n",
-       "       [4, 2],\n",
-       "       [1, 1],\n",
-       "       [2, 2],\n",
-       "       [1, 3],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 1],\n",
-       "       [3, 3],\n",
-       "       [1, 2],\n",
-       "       [4, 3],\n",
-       "       [5, 3],\n",
-       "       [4, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [5, 3],\n",
-       "       [2, 1],\n",
-       "       [5, 4],\n",
-       "       [4, 4],\n",
-       "       [4, 3],\n",
-       "       [2, 1],\n",
-       "       [5, 4],\n",
-       "       [5, 3],\n",
-       "       [1, 3],\n",
-       "       [5, 2],\n",
-       "       [3, 2],\n",
-       "       [1, 2],\n",
-       "       [5, 4],\n",
-       "       [2, 2],\n",
-       "       [4, 3],\n",
-       "       [2, 2],\n",
-       "       [5, 2],\n",
-       "       [4, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 3],\n",
-       "       [4, 2],\n",
-       "       [5, 4],\n",
-       "       [5, 2],\n",
-       "       [3, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 3],\n",
-       "       [4, 3],\n",
-       "       [4, 2],\n",
-       "       [2, 1],\n",
-       "       [5, 2],\n",
-       "       [4, 2],\n",
-       "       [2, 1],\n",
-       "       [2, 2],\n",
-       "       [4, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 3],\n",
-       "       [2, 2],\n",
-       "       [4, 2],\n",
-       "       [2, 2],\n",
-       "       [3, 2],\n",
-       "       [1, 2],\n",
-       "       [5, 2],\n",
-       "       [2, 2],\n",
-       "       [4, 3],\n",
-       "       [3, 3],\n",
-       "       [5, 4],\n",
-       "       [3, 2],\n",
-       "       [5, 3],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [4, 2],\n",
-       "       [4, 2],\n",
-       "       [4, 3],\n",
-       "       [5, 3],\n",
-       "       [5, 3],\n",
-       "       [5, 3],\n",
-       "       [5, 3],\n",
-       "       [5, 3],\n",
-       "       [4, 4],\n",
-       "       [5, 4],\n",
-       "       [3, 2],\n",
-       "       [3, 2],\n",
-       "       [5, 3],\n",
-       "       [4, 2],\n",
-       "       [4, 2],\n",
-       "       [1, 1],\n",
-       "       [4, 2],\n",
-       "       [2, 1],\n",
-       "       [5, 4],\n",
-       "       [4, 2],\n",
-       "       [4, 3],\n",
-       "       [5, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 3],\n",
-       "       [5, 2],\n",
-       "       [3, 3],\n",
-       "       [5, 2],\n",
-       "       [5, 3],\n",
-       "       [2, 1],\n",
-       "       [4, 2],\n",
-       "       [4, 2],\n",
-       "       [3, 2],\n",
-       "       [3, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 1],\n",
-       "       [4, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 2],\n",
-       "       [5, 3],\n",
-       "       [3, 2],\n",
-       "       [5, 3],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [3, 2],\n",
-       "       [3, 3],\n",
-       "       [2, 1],\n",
-       "       [4, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [5, 3],\n",
-       "       [1, 2],\n",
-       "       [1, 3],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [2, 2],\n",
-       "       [4, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 2],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [5, 4],\n",
-       "       [3, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 3],\n",
-       "       [4, 3],\n",
-       "       [2, 2],\n",
-       "       [4, 2],\n",
-       "       [2, 2],\n",
-       "       [3, 2],\n",
-       "       [5, 4],\n",
-       "       [3, 2],\n",
-       "       [2, 3],\n",
-       "       [4, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 3],\n",
-       "       [2, 2],\n",
-       "       [4, 3],\n",
-       "       [5, 3],\n",
-       "       [2, 3],\n",
-       "       [2, 2],\n",
-       "       [4, 2],\n",
-       "       [2, 2],\n",
-       "       [2, 3],\n",
-       "       [3, 2],\n",
-       "       [3, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 3],\n",
-       "       [5, 4],\n",
-       "       [2, 2],\n",
-       "       [5, 2],\n",
-       "       [1, 1],\n",
-       "       [4, 3],\n",
-       "       [1, 2],\n",
-       "       [1, 3],\n",
-       "       [3, 2],\n",
-       "       [3, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 3],\n",
-       "       [2, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [5, 3],\n",
-       "       [4, 2],\n",
-       "       [5, 3],\n",
-       "       [4, 2],\n",
-       "       [2, 1],\n",
-       "       [5, 3],\n",
-       "       [5, 3],\n",
-       "       [5, 3],\n",
-       "       [5, 2],\n",
-       "       [4, 3],\n",
-       "       [4, 2],\n",
-       "       [4, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 3],\n",
-       "       [1, 3],\n",
-       "       [2, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 3],\n",
-       "       [4, 3],\n",
-       "       [4, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 3],\n",
-       "       [1, 2],\n",
-       "       [4, 2],\n",
-       "       [2, 3],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [2, 3],\n",
-       "       [2, 2],\n",
-       "       [1, 2],\n",
-       "       [1, 3],\n",
-       "       [5, 3],\n",
-       "       [1, 2],\n",
-       "       [1, 2],\n",
-       "       [5, 4],\n",
-       "       [3, 2],\n",
-       "       [3, 2],\n",
-       "       [2, 3],\n",
-       "       [1, 2],\n",
-       "       [2, 1],\n",
-       "       [2, 2],\n",
-       "       [4, 2],\n",
-       "       [2, 2],\n",
-       "       [5, 4],\n",
-       "       [4, 2],\n",
-       "       [5, 2],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [5, 3],\n",
-       "       [5, 3],\n",
-       "       [3, 2],\n",
-       "       [3, 2],\n",
-       "       [5, 4],\n",
-       "       [4, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 3],\n",
-       "       [5, 3],\n",
-       "       [3, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 1],\n",
-       "       [5, 3],\n",
-       "       [5, 2],\n",
-       "       [5, 4],\n",
-       "       [5, 3],\n",
-       "       [5, 3],\n",
-       "       [1, 2],\n",
-       "       [5, 3],\n",
-       "       [4, 3],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [5, 4],\n",
-       "       [1, 1],\n",
-       "       [5, 3],\n",
-       "       [5, 3],\n",
-       "       [2, 2],\n",
-       "       [5, 4],\n",
-       "       [1, 1],\n",
-       "       [2, 1],\n",
-       "       [4, 2],\n",
-       "       [5, 3],\n",
-       "       [3, 2],\n",
-       "       [1, 1],\n",
-       "       [1, 3],\n",
-       "       [2, 1],\n",
-       "       [2, 2],\n",
-       "       [1, 3],\n",
-       "       [5, 4],\n",
-       "       [4, 2],\n",
-       "       [1, 1],\n",
-       "       [5, 3],\n",
-       "       [3, 2],\n",
-       "       [3, 2],\n",
-       "       [1, 2],\n",
-       "       [3, 2]])"
+       "0.05280751141611358"
       ]
      },
      "execution_count": 9,
@@ -577,13 +75,15 @@
     }
    ],
    "source": [
-    "mode[:,:]"
+    "kendall_tau, kendall_p = sp.stats.kendalltau(publishers_df.clickbait_score, publishers_df.popularity)\n",
+    "spearman_rho, spearman_p = sp.stats.pearsonr(publishers_df.clickbait_score, publishers_df.popularity)\n",
+    "kendall_p"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ec9448b-5050-4d46-af57-ccdf67f45107",
+   "id": "1c7e4b30-ea0f-43e6-8541-6fa8f421bd4e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -605,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
